# TWStockAnalysis

./: .gitignore  .gitmodules  Dockerfile  README.md  install_docker.sh  requirements.txt  start.sh
backend_api/: Dockerfile  package.json
backend_api/backend_api/: package.json
backend_api/public/: info.json
client/: package.json
client/public/: index.html
client/src/components/: GridItem.js  dataPlot.js
compute/: .gitignore  Dockerfile  README.md  new.csv  profiling.sh  requirements.txt  routine.sh
compute/data/: __init__.py  get.py  utils.py
compute/data/crawler/: brokers.py  crawler_framework.py  run.py
compute/data/crawler/utils/: data_preprocessing.py  utils.py
compute/data/database/: __init__.py  interface.py  schemas.py  sql_commands.py
compute/profiling/: print_result.py  thread_num_16  thread_num_2  thread_num_8  v1_all_python  v1_cpp  v1_cpp_omp  v1_cpp_serial  v2_all_python  v2_cpp_openmp  v3_cpp_pthread  v4_all_cpp  v5_pthread
compute/strategies/: core.py  run.py
compute/strategies/cpp_acc/: core.py  test_pybind.py  test_pybind.sh
compute/strategies/rules/logic/: BBandsLogic.py  BaseLogic.py  ITFollow.py  NewFactor.py  PEPBLogic.py
compute/strategies/rules/money_distribution/: Base.py  EvenDistribution.py  __init__.py  utils.py
compute/strategies/static/: info.json
core/: .clang-format  CMakeLists.txt  main.cpp
core/src/: CMakeLists.txt  main.cpp  main_old.cpp  trade.cpp  trade.h
data/crawler/: crawler_callback.py
data/crawler/utils/: target_info.py
data/database/: config.py  interface.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: PopupWindow.js
frontend/src/components/utils/: appendScript.js
server/: README.md  package-lock.json  package.json
server/backend_api/: README.md  package-lock.json
server/public/: index.html
server/src/: index.ts
shell_scripts/: routine.sh
strategies/: core.py
strategies/rules/logic/: BaseLogic.py  ITFollow.py  NewFactor.py  PEPBLogic.py  __init__.py
strategies/rules/money_distribution/: Base.py  EvenDistribution.py  utils.py
strategies/static/: info.json
td_op/: .gitignore  CMakeLists.txt  pyproject.toml  setup.py
td_op/src/: CMakeLists.txt  main_old.cpp  main_old2.cpp  op.cpp  op.h  py_mod.cpp
td_op/tests/: CMakeLists.txt  tests.cpp
